fixed (again) aircraft info scroll on iOS

--- a/css/map.css
+++ b/css/map.css
@@ -54,8 +54,6 @@ html, body {
 }
 
 div.aircraftInfoContent {
-    overflow-y: scroll; /* has to be scroll, not auto */
-    -webkit-overflow-scrolling: touch;
     width: 150px;
     height: 150px;
 }
@@ -488,7 +486,8 @@ HEADER {
 #expandedInfo {
     display: none;
     padding-right: 24px;
-    overflow-y: auto;
+    overflow-y: scroll; /* has to be scroll, not auto */
+    -webkit-overflow-scrolling: touch;
     padding-left: 24px;
     height: 100%;
 }
